crates/solidity/testing/snapshots/bindings_output/modifiers/diamond/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or Semicolon.
   ╭─[ input.sol:2:18 ]
   │
 2 │     modifier foo virtual { _; }
   │                  ───────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
   ╭─[ input.sol:6:18 ]
   │
 6 │     modifier foo virtual override { _; }
   │                  ────────────┬───────────  
   │                              ╰───────────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
    ╭─[ input.sol:10:18 ]
    │
 10 │     modifier foo virtual override { _; }
    │                  ────────────┬───────────  
    │                              ╰───────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Base {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     modifier foo virtual { _; }
    │              ─┬─  
    │               ╰─── name: 2
    │ 
  5 │ contract A is Base {
    │          ┬  
    │          ╰── name: 3
  6 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── name: 4
    │ 
  9 │ contract B is Base {
    │          ┬  
    │          ╰── name: 5
 10 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── name: 6
    │ 
 13 │ contract Test is B, A {
    │          ──┬─  
    │            ╰─── name: 7
 14 │     function test() public foo {}
    │              ──┬─  
    │                ╰─── name: 8
    │
    ├─[ input.sol:1:1 ]
    │
  5 │ contract A is Base {
    │               ──┬─  
    │                 ╰─── ref: 1
    │ 
  9 │ contract B is Base {
    │               ──┬─  
    │                 ╰─── ref: 1
    │ 
 13 │ contract Test is B, A {
    │                  ┬  ┬  
    │                  ╰───── ref: 5
    │                     │  
    │                     ╰── ref: 3
 14 │     function test() public foo {}
    │                            ─┬─  
    │                             ╰─── refs: 6, 4, 2
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Base {
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         modifier foo virtual { _; }
    │     ────────┬───────  
    │             ╰───────── definiens: 2
    │ 
  4 │ ╭─▶ 
    ┆ ┆   
  7 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  6 │         modifier foo virtual override { _; }
    │     ────────┬───────  
    │             ╰───────── definiens: 4
    │ 
  8 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 5
    │
    ├─[ input.sol:1:1 ]
    │
 10 │         modifier foo virtual override { _; }
    │     ────────┬───────  
    │             ╰───────── definiens: 6
    │ 
 12 │ ╭─▶ 
    ┆ ┆   
 15 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 7
    │
    ├─[ input.sol:1:1 ]
    │
 14 │     function test() public foo {}
    │ ─────────────────┬────────────────  
    │                  ╰────────────────── definiens: 8
────╯
